# ure

./: .gitignore  .pre-commit-config.yaml  .pre-commit-run.py  CHANGELOG.md  README.md  README.zh-CN.md  README_CN.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
myre/: __init__.py  match.py  pattern.py  protocol.py
tests/: test_match.py  test_pattern.py  test_pattern_composition.py  test_patternlike_protocol.py  test_re_compatibility.py
