[tool.poetry]
authors = ["blurhead <blurhead@outlook.com>"]
description = "Human Readable Regular Expression"
license = "MIT"
name = "myre"
readme = "README.md"
repository = "https://github.com/blurhead/myre"
version = "0.0.4"

[[tool.poetry.source]]
name = "default"
priority = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0"
pre-commit = "^3.0"
pytest = "^7.0"
ruff = "^0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
# Allow unused variables when underscore-prefixed.
builtins = ["_"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = ["tests"]
ignore = [
  "B008",   # do not perform function calls in argument defaults
  "C901",   # too complex
  "B905",   # zip() strict parameter checking
  "RET503", # missing explicit return
  "RET504", # unnecessary assignment
  "RET505", # unnecessary else/elif after return statement
  "W191",   # indentation contains tabs(ruff will fix it)
  "E501",   # line too long(ruff will fix it)
]
line-length = 120
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "C", # flake8-comprehensions
  "B", # flake8-bugbear
  "R", # Refactor
]
target-version = "py38"
# Allow autofix for all enabled rules (when `--fix`) is provided.
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.isort]
known-third-party = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings --import-mode=importlib -ra -q -s -vv"
minversion = "7.0"
testpaths = ["tests"]
