[project]
name = "myre"
version = "0.0.8"
description = "Human Readable Regular Expression"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "blurhead", email = "blurhead@outlook.com"}
]
repository = "https://github.com/blurhead/myre"

dependencies = [
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pre-commit>=3.0",
    "pytest>=8.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Allow unused variables when underscore-prefixed.
builtins = ["_"]
exclude = ["tests"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore = [
  "E501", # line too long(ruff will fix it)
]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "C", # flake8-comprehensions
  "B", # flake8-bugbear
  "R", # Refactor
]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings --import-mode=importlib -ra -q -s -vv"
minversion = "7.0"
testpaths = ["tests"]

[tool.mypy]
no_implicit_optional = false
